[tool.poetry]
name = "lawg.py"
version = "0.1.0a1"
description = "lawg's python integration"
authors = ["Hexiro <mail@hexiro.me>", "devlooskie <hello@looskie.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
