[tool.poetry]
name = "lawg.py"
version = "0.1.0a1"
description = "lawg's python integration"
authors = ["Nathan Lodge <mail@hexiro.me>", "Devlooskie <hello@looskie.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.24.1"
marshmallow = "^3.19.0"
marshmallow-union = "^0.1.15.post1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = ">=5,<8"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["TCH", "RUF", "SIM", "N", "S", "B", "A", "C4", "EM", "INP", "PIE", "SIM", "ERA", "TRY", "TD",  "TID", "F"]
ignore = ["A002", "A003", "EM101", "TD003"]  
